<resources>
    <string name="app_name">Beat That</string>
    <string name="str_welcome">Welcome</string>
    <string name="str_login_account">Login to your account</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_login">Login</string>
    <string name="str_no_account">Don\'t have an account?</string>
    <string name="str_signup_here">Sign up here</string>
    <string name="str_email">Email</string>
    <string name="str_create_account">Create your account</string>
    <string name="str_already_account">Already have an account\?</string>

</resources>