<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_clr"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/str_welcome"
            android:textColor="@color/txt_clr"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/str_login_account"
            android:textColor="@color/txt_clr"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_rounded_edittext"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/str_username"
            android:padding="10dp"
            android:textColor="@color/txt_clr"
            android:textColorHint="@color/txt_hint_clr"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_rounded_edittext"
            android:drawableEnd="@drawable/ic_eye"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/str_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/txt_clr"
            android:textColorHint="@color/txt_hint_clr"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_rounded_button"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="20sp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_horizontal_line"
            android:drawableEnd="@drawable/ic_horizontal_line"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="Or sign in with"
            android:textColor="@color/txt_clr"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/img_google"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_google" />

            <ImageView
                android:id="@+id/img_facebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_facebook" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/str_no_account"
                android:textColor="@color/txt_clr"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/str_signup_here"
                android:textColor="@color/blue"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>